Open java.lang, java.lang.reflect modules